--- a/ai_diet_firebase/pubspec.yaml
+++ b/ai_diet_firebase/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   gender_picker: ^1.1.0
   vertical_weight_slider: ^2.4.0
   pedometer: ^3.0.0
+  multi_select_flutter: ^4.1.2
+  states_rebuilder: ^6.1.0+1
 
 dev_dependencies:
   flutter_test:
